--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
         <p>
             This page is meant to help players, old and new, get around the server and visit other locations.
-            UVDOT, along with the OPC, Seacrestia Transports, and more, are in the process of creating transit
+            UVDOT, along with the OPC, Seacrestica Transports, and more, are in the process of creating transit
             infrastructure across the server, currently spanning just over 100KM!
             <br>
             More info on the transit system at large can be found <a href="/">here</a>, and a tutorial on how to use this
             page can be viewed <a href="/">here</a>. For technical info, head to the uvweb Github repository and read the
-            uv-transit <a href="https://github.com/GirlInPurple/uv-transit/blob/main/README.md">readme.md</a> file.
+            uv-transit <a href="https://github.com/GirlInPurple/uv-transit/blob/master/README.md">readme.md</a> file.
             <br>
         </p>
 
