Fix douplicate id usage

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                         </select>
                         <p class="small">Even if the option to avoid tolls is set, the options below override it.</p>
                         <input type="checkbox" name="have-SeaCard" id="have-seacard"><label for="have-seacard">I have a ST SeaCard</label><br>
-                        <input type="checkbox" name="have-EasyPass" id="have-seacard"><label for="have-seacard">I have a UVDOT EasyPass</label><br>
+                        <input type="checkbox" name="have-EasyPass" id="have-easypass"><label for="have-easypass">I have a UVDOT EasyPass</label><br>
                     </details>
                     <details><summary>Routing Preferences</summary>
                         <input type="checkbox" checked name="use-warps" id="use-warps"><label for="use-warps">Use Warp Commands</label><br>
