Added changelog change

--- a/index.html
+++ b/index.html
@@ -124,11 +124,11 @@
         </div>
     </div>
     <datalist id="speedlist">
-        <option value="5.6">5.6 (Sprinting)</option>
-        <option value="4.3">4.3 (Walking)</option>
-        <option value="7">7.0 (Sprint-jumping)</option>
-        <option value="9.5">9.5 (Average horse speed)</option>
-        <option value="14">14.0 (Max. horse speed)</option>
+        <option value="5.6">Sprinting (5.6)</option>
+        <option value="4.3">Walking (4.3)</option>
+        <option value="7">Sprint-jumping (7.0)</option>
+        <option value="9.5">Average horse speed (9.5)</option>
+        <option value="14">Max. horse speed (14.0)</option>
     </datalist>
     <script>
         
