--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div>
                 <p style="text-align: center;">
-                    Version 1.0.2, Last Updated <abbr title="10th of July, 2024, at 10:23 EST/USA East">10/07/2024</abbr><br>
+                    Version 1.0.3, Last Updated <abbr title="11th of July, 2024, at 10:23 EST/USA East">10/07/2024</abbr><br>
                     Changelog available <a href="https://github.com/GirlInPurple/uv-transit/blob/master/changelog.md">here</a>
                 </p>
             </div>
@@ -441,7 +441,7 @@
                     }
 
                     console.debug(graph, startNode, goalNode)
-                    if (jQuery.isEmptyObject(graph) || startNode === 'undefined' || goalNode === 'undefined') {
+                    if (jQuery.isEmptyObject(graph) || startNode === null || goalNode === null) {
                         return { 
                             path: [], 
                             pathTook: null, 
