Return to the data.js format for storing data

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <details><summary>Experimental</summary>
                         <p class="small">
                             This option makes the router prefer AFK-able transit, like Iceways, Pistonbolts, Minecarts, etc.
-                            While Iceways aren't necessarily AFK-able, you can hold down the W key with a Python script, mod, or a weight.
+                            While Iceways aren't necessarily AFK-able, you can hold down the W key with a script, mod, or a weight, so its more semi-AFK-able.
                         </p>
                         <input type="checkbox" name="large-crowd" id="large-crowd"><label for="large-crowd">Prefer AFK-able Transit</label><br>
                         <p class="small">
